--- a/gradle.properties
+++ b/gradle.properties
@@ -4,19 +4,19 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # environment
-minecraftVersion=1.18.1
+minecraftVersion=1.18.2
 projectLoader=Forge
-forgeVersion=1.18.1-39.0.75
-puzzlesVersion=v3.2.1-1.18.1-Forge
+forgeVersion=1.18.2-40.1.21
+puzzlesVersion=v3.3.5-1.18.2-Forge
 mappingsChannel=official
-mappingsVersion=1.18.1
+mappingsVersion=1.18.2
 enableHotswap=false
 copyBuildJar=true
 
 # dependencies
-minForgeVersion=38
-minMinecraftVersion=1.18
-minPuzzlesVersion=3.2.1
+minForgeVersion=40
+minMinecraftVersion=1.18.2
+minPuzzlesVersion=3.3.5
 packFormat=8
 
 # attributes
@@ -34,4 +34,4 @@ modGroup=fuzs.horseexpert
 # publishing
 curseProjectId=0
 curseReleaseType=release
-curseProjectVersion=1.18, 1.18.1
+curseProjectVersion=1.18.2
