--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -35,6 +35,13 @@ issueTrackerURL="${modIssueUrl}"
     ordering="NONE"
     side="BOTH"
 
+[[dependencies.${modId}]]
+    modId="curios"
+    mandatory=true
+    versionRange="[1.18.2-5.0.0,)"
+    ordering="NONE"
+    side="BOTH"
+
 [modproperties.${modId}]
     catalogueImageIcon="mod_logo.png"
     configuredBackground="minecraft:textures/block/birch_planks.png"
