--- a/gradle.properties
+++ b/gradle.properties
@@ -2,36 +2,44 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+org.gradle.parallel=true
 
-# environment
-minecraftVersion=1.18.2
-projectLoader=Forge
-forgeVersion=1.18.2-40.1.21
-puzzlesVersion=v3.3.5-1.18.2-Forge
-mappingsChannel=official
-mappingsVersion=1.18.2
-enableHotswap=false
+# Common Project
+minecraftVersion=1.19.2
+minMinecraftVersion=1.19.1
+parchmentMappingsVersion=2022.08.14
+puzzlesVersion=4.2.13
+minPuzzlesVersion=4.2.13
+packFormat=9
 copyBuildJar=true
 
-# dependencies
-minForgeVersion=40
-minMinecraftVersion=1.18.2
-minPuzzlesVersion=3.3.5
-packFormat=8
+# Forge Project
+forgeVersion=1.19.2-43.1.1
+minForgeVersion=42.0.0
 
-# attributes
+# Fabric Project
+fabricVersion=0.14.9
+minFabricVersion=0.14
+fabricApiVersion=0.60.0+1.19.2
+minFabricApiVersion=0.60.0
+
+# Mod Attributes
 modId=horseexpert
 modName=Horse Expert
-modVersion=3.0.0
+modVersion=4.0.0
 modAuthor=Fuzs
-modDescription=Trouble telling your horses apart by their statistics? Time to become a horse expert!
-modPageUrl=https://www.curseforge.com/minecraft/mc-mods/horse-expert-forge
+modDescription=You want to know what your horses are truly capable of? Check out their statistics!
+modSourceUrl=https://github.com/Fuzss/horseexpert
+modIssueUrl=https://github.com/Fuzss/horseexpert/issues
 modUpdateUrl=https://raw.githubusercontent.com/Fuzss/modresources/main/update/horseexpert.json
-modIssueUrl=https://github.com/Fuzss/horseexpert-forge/issues
-modSourceUrl=https://github.com/Fuzss/horseexpert-forge
-modGroup=fuzs.horseexpert
+modMavenGroup=fuzs.horseexpert
+# "MATCH_VERSION" for a mod required on both sides, "IGNORE_SERVER_VERSION" for a server only mod, "IGNORE_ALL_VERSION" for a client only mod
+modForgeDisplayTest=MATCH_VERSION
+# "*" for a mod loaded on both sides, "server" for a server only mod, "client" for a client only mod
+modFabricEnvironment=*
 
-# publishing
-curseProjectId=0
-curseReleaseType=release
-curseProjectVersion=1.18.2
+# Mod Publishing
+projectReleaseType=release
+projectGameVersions=1.19.1, 1.19.2
+projectCurseId=0
+projectModrinthId=0
