--- a/Forge/build.gradle
+++ b/Forge/build.gradle
@@ -27,8 +27,8 @@ version = "v${modVersion}-${minecraftVersion}-Forge"
 group = modMavenGroup
 
 minecraft {
-    mappings channel: 'parchment', version: "${parchmentMappingsVersion}-${parchmentMinecraftVersion}"
-//    mappings channel: 'official', version: "${minecraftVersion}"
+//    mappings channel: 'parchment', version: "${parchmentMappingsVersion}-${minecraftVersion}"
+    mappings channel: 'official', version: "${minecraftVersion}"
 
     runs {
         client {
@@ -116,13 +116,13 @@ dependencies {
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
 
     // Curios Api
-    api fg.deobf("top.theillusivec4.curios:curios-forge:1.19.3-5.1.4.1:api")
-    runtimeOnly fg.deobf("top.theillusivec4.curios:curios-forge:1.19.3-5.1.4.1")
+    api fg.deobf("top.theillusivec4.curios:curios-forge:1.19.4-5.1.5.3:api")
+    runtimeOnly fg.deobf("top.theillusivec4.curios:curios-forge:1.19.4-5.1.5.3")
 
     // Quality of Life Mods
-    runtimeOnly fg.deobf("fuzs.bettermodsbutton:bettermodsbutton-forge:5.0.0")
-    runtimeOnly fg.deobf("curse.maven:catalogue-459701:4171025")
-    runtimeOnly fg.deobf("curse.maven:configured-457570:4441589")
+    runtimeOnly fg.deobf("fuzs.bettermodsbutton:bettermodsbutton-forge:6.0.0")
+    runtimeOnly fg.deobf("curse.maven:catalogue-459701:4496718")
+    runtimeOnly fg.deobf("curse.maven:configured-457570:4462894")
 
     // Puzzles Lib
     api fg.deobf("fuzs.puzzleslib:puzzleslib-forge:${puzzlesVersion}")
