--- a/1.18/Forge/build.gradle
+++ b/1.18/Forge/build.gradle
@@ -6,6 +6,9 @@ dependencies {
     // Puzzles Lib
     api fg.deobf(libs.puzzleslib.forge.get())
 
+    // Curios
+    api fg.deobf(libs.curios.forge.get())
+
     // Quality of Life Mods
     versionCatalog.findLibrary("bettermodsbutton.forge").ifPresent {
         runtimeOnly fg.deobf(it.get())
