--- a/1.18/Forge/src/main/resources/META-INF/mods.toml
+++ b/1.18/Forge/src/main/resources/META-INF/mods.toml
@@ -36,5 +36,12 @@ versionRange = "[${minPuzzlesVersion},)"
 ordering = "NONE"
 side = "BOTH"
 
+[[dependencies.${ modId }]]
+modId = "curios"
+mandatory = true
+versionRange = "*"
+ordering = "NONE"
+side = "BOTH"
+
 [modproperties.${ modId }]
 catalogueImageIcon = "mod_logo.png"
