--- a/1.18/gradle.properties
+++ b/1.18/gradle.properties
@@ -6,16 +6,16 @@ org.gradle.parallel=true
 copyBuildJar=true
 
 # Mod Attributes
-modId=examplemod
-modName=Example Mod
+modId=horseexpert
+modName=Horse Expert
 modVersion=3.0.0
 modAuthor=Fuzs
-modDescription=Example description.
+modDescription=You want to know what your horses are truly capable of? Check out their statistics!
 modLicense=MPL-2.0
-modSourceUrl=https://github.com/Fuzss/examplemod
-modIssueUrl=https://github.com/Fuzss/examplemod/issues
-modUpdateUrl=https://raw.githubusercontent.com/Fuzss/modresources/main/update/examplemod.json
-modMavenGroup=fuzs.examplemod
+modSourceUrl=https://github.com/Fuzss/horseexpert
+modIssueUrl=https://github.com/Fuzss/horseexpert/issues
+modUpdateUrl=https://raw.githubusercontent.com/Fuzss/modresources/main/update/horseexpert.json
+modMavenGroup=fuzs.horseexpert
 # "MATCH_VERSION" for a mod required on both sides, "IGNORE_SERVER_VERSION" for a server only mod, "IGNORE_ALL_VERSION" for a client only mod
 modForgeDisplayTest=MATCH_VERSION
 # "*" for a mod loaded on both sides, "server" for a server only mod, "client" for a client only mod
@@ -23,13 +23,19 @@ modFabricEnvironment=*
 
 # Mod Publishing
 projectReleaseType=release
-projectCurseForgeId=0
-projectModrinthId=0
+projectCurseForgeId=666942
+projectModrinthId=24CSPS1E
 
-dependenciesVersionCatalog=1.18.2-v5
-dependenciesRequiredForgeCurseForge=puzzles-lib
-dependenciesRequiredFabricCurseForge=fabric-api, forge-config-api-port-fabric, puzzles-lib
-dependenciesRequiredForgeModrinth=puzzles-lib
-dependenciesRequiredFabricModrinth=fabric-api, forge-config-api-port, puzzles-lib
+dependenciesVersionCatalog=1.18.2-v16
+dependenciesPuzzlesLibVersion=3.5.8
+dependenciesMinPuzzlesLibVersion=3.5.8
+dependenciesRequiredForgeCurseForge=puzzles-lib, curios
+dependenciesRequiredFabricCurseForge=fabric-api, forge-config-api-port-fabric, puzzles-lib, trinkets
+dependenciesRequiredForgeModrinth=puzzles-lib, curios
+dependenciesRequiredFabricModrinth=fabric-api, forge-config-api-port, puzzles-lib, trinkets
+dependenciesOptionalForgeCurseForge=config-menus-forge
+dependenciesOptionalFabricCurseForge=config-menus-forge
+dependenciesOptionalForgeModrinth=forge-config-screens
+dependenciesOptionalFabricModrinth=forge-config-screens
 #dependenciesEmbeddedFabricCurseForge=cardinal-components
 #dependenciesEmbeddedFabricModrinth=cardinal-components-api
