--- a/1.20/gradle.properties
+++ b/1.20/gradle.properties
@@ -26,7 +26,9 @@ projectReleaseType=release
 projectCurseForgeId=666942
 projectModrinthId=24CSPS1E
 
-dependenciesVersionCatalog=1.20.1-v4
+dependenciesVersionCatalog=1.20.1-v16
+dependenciesPuzzlesLibVersion=8.0.24
+dependenciesMinPuzzlesLibVersion=8.0.24
 dependenciesRequiredForgeCurseForge=puzzles-lib, curios
 dependenciesRequiredFabricCurseForge=fabric-api, forge-config-api-port-fabric, puzzles-lib, trinkets
 dependenciesRequiredForgeModrinth=puzzles-lib, curios
