optional curios/trinkets + item tag

--- a/1.20/gradle.properties
+++ b/1.20/gradle.properties
@@ -8,7 +8,7 @@ copyBuildJar=true
 # Mod Attributes
 modId=horseexpert
 modName=Horse Expert
-modVersion=8.0.1
+modVersion=8.1.0
 modAuthor=Fuzs
 modDescription=You want to know what your horses are truly capable of? Check out their statistics!
 modLicense=MPL-2.0
@@ -26,12 +26,16 @@ projectReleaseType=release
 projectCurseForgeId=666942
 projectModrinthId=24CSPS1E
 
-dependenciesVersionCatalog=1.20.1-v16
-dependenciesPuzzlesLibVersion=8.0.24
-dependenciesMinPuzzlesLibVersion=8.0.24
-dependenciesRequiredForgeCurseForge=puzzles-lib, curios
-dependenciesRequiredFabricCurseForge=fabric-api, forge-config-api-port-fabric, puzzles-lib, trinkets
-dependenciesRequiredForgeModrinth=puzzles-lib, curios
-dependenciesRequiredFabricModrinth=fabric-api, forge-config-api-port, puzzles-lib, trinkets
-#dependenciesEmbeddedFabricCurseForge=cardinal-components
+dependenciesVersionCatalog=1.20.1-v25
+#dependenciesPuzzlesLibVersion=8.1.7
+#dependenciesMinPuzzlesLibVersion=8.1.7
+dependenciesRequiredForgeCurseForge=puzzles-lib
+dependenciesRequiredFabricCurseForge=fabric-api, forge-config-api-port-fabric, puzzles-lib
+dependenciesRequiredForgeModrinth=puzzles-lib
+dependenciesRequiredFabricModrinth=fabric-api, forge-config-api-port, puzzles-lib
+dependenciesOptionalForgeCurseForge=config-menus-forge, curios
+dependenciesOptionalFabricCurseForge=config-menus-forge, trinkets
+dependenciesOptionalForgeModrinth=forge-config-screens, curios
+dependenciesOptionalFabricModrinth=forge-config-screens, trinkets
+#dependenciesEmbeddedFabricCurseForge=cardinal-components-api
 #dependenciesEmbeddedFabricModrinth=cardinal-components-api
