--- a/1.20/Forge/src/main/resources/META-INF/mods.toml
+++ b/1.20/Forge/src/main/resources/META-INF/mods.toml
@@ -38,7 +38,7 @@ side = "BOTH"
 
 [[dependencies.${ modId }]]
 modId = "curios"
-mandatory = true
+mandatory = false
 versionRange = "*"
 ordering = "NONE"
 side = "BOTH"
