--- a/1.21/gradle.properties
+++ b/1.21/gradle.properties
@@ -5,7 +5,7 @@ copyBuildJar=true
 # Mod Attributes
 modId=horseexpert
 modName=Horse Expert
-modVersion=20.4.1
+modVersion=21.0.0
 modAuthor=Fuzs
 modDescription=You want to know what your horses are truly capable of? Check out their statistics!
 modLicense=MPL-2.0
@@ -19,15 +19,16 @@ modForgeDisplayTest=MATCH_VERSION
 modFabricEnvironment=*
 
 # Version Catalog
-dependenciesVersionCatalog=1.20.4-v17
-#dependenciesPuzzlesLibVersion=20.4.13
-#dependenciesMinPuzzlesLibVersion=20.4.13
+dependenciesVersionCatalog=1.21-v28
+#dependenciesPuzzlesLibVersion=21.0.22
+#dependenciesMinPuzzlesLibVersion=21.0.22
 
 # Mod Publishing
 projectReleaseType=release
 projectCurseForgeId=666942
 projectModrinthId=24CSPS1E
 
+# Required Dependencies
 dependenciesRequiredFabricCurseForge=fabric-api, forge-config-api-port-fabric, puzzles-lib
 dependenciesRequiredNeoForgeCurseForge=puzzles-lib
 dependenciesRequiredForgeCurseForge=forge-config-api-port-fabric, puzzles-lib
@@ -35,9 +36,10 @@ dependenciesRequiredFabricModrinth=fabric-api, forge-config-api-port, puzzles-li
 dependenciesRequiredNeoForgeModrinth=puzzles-lib
 dependenciesRequiredForgeModrinth=forge-config-api-port, puzzles-lib
 
+# Optional Dependencies
 dependenciesOptionalFabricCurseForge=config-menus-forge, trinkets
-dependenciesOptionalNeoForgeCurseForge=config-menus-forge, curios
+dependenciesOptionalNeoForgeCurseForge=config-menus-forge, curios-continuation
 dependenciesOptionalForgeCurseForge=config-menus-forge, curios
 dependenciesOptionalFabricModrinth=forge-config-screens, trinkets
-dependenciesOptionalNeoForgeModrinth=forge-config-screens, curios
+dependenciesOptionalNeoForgeModrinth=forge-config-screens, curios-continuation
 dependenciesOptionalForgeModrinth=forge-config-screens, curios
