--- a/1.21.3/NeoForge/src/main/resources/META-INF/neoforge.mods.toml
+++ b/1.21.3/NeoForge/src/main/resources/META-INF/neoforge.mods.toml
@@ -46,7 +46,7 @@ ordering = "NONE"
 side = "BOTH"
 
 [[dependencies.${ modId }]]
-modId = "curios"
+modId = "accessories"
 mandatory = false
 type = "optional"
 versionRange = "*"
