--- a/1.21.3/NeoForge/build.gradle
+++ b/1.21.3/NeoForge/build.gradle
@@ -4,6 +4,11 @@ dependencies {
     // Puzzles Lib
     modApi libs.puzzleslib.neoforge
 
-    // Curios
-    modApi libs.curios.neoforge
+    // Accessories
+    modCompileOnly "io.wispforest:accessories-neoforge:1.2.3-beta+1.21.2"
+//    modRuntimeOnly("blue.endless:jankson:1.2.2")
+//    modRuntimeOnly("io.wispforest:endec:0.1.9")
+//    modRuntimeOnly("io.wispforest.endec:gson:0.1.5")
+//    modRuntimeOnly("io.wispforest.endec:jankson:0.1.6")
+//    modRuntimeOnly("io.wispforest.endec:netty:0.1.5")
 }
