--- a/1.21.3/gradle.properties
+++ b/1.21.3/gradle.properties
@@ -5,7 +5,7 @@ copyBuildJar=true
 # Mod Attributes
 modId=horseexpert
 modName=Horse Expert
-modVersion=21.1.0
+modVersion=21.3.0
 modAuthor=Fuzs
 modDescription=You want to know what your horses are truly capable of? Check out their statistics!
 modLicense=MPL-2.0
@@ -19,9 +19,9 @@ modForgeDisplayTest=MATCH_VERSION
 modFabricEnvironment=*
 
 # Version Catalog
-dependenciesVersionCatalog=1.21.1-v6
-#dependenciesPuzzlesLibVersion=21.1.0
-#dependenciesMinPuzzlesLibVersion=21.1.0
+dependenciesVersionCatalog=1.21.3-v19
+dependenciesPuzzlesLibVersion=21.3.16
+dependenciesMinPuzzlesLibVersion=21.3.16
 
 # Mod Publishing
 projectReleaseType=release
