--- a/1.21.3/gradle.properties
+++ b/1.21.3/gradle.properties
@@ -19,9 +19,9 @@ modForgeDisplayTest=MATCH_VERSION
 modFabricEnvironment=*
 
 # Version Catalog
-dependenciesVersionCatalog=1.21.3-v19
-dependenciesPuzzlesLibVersion=21.3.16
-dependenciesMinPuzzlesLibVersion=21.3.16
+dependenciesVersionCatalog=1.21.3-v20
+#dependenciesPuzzlesLibVersion=21.3.16
+#dependenciesMinPuzzlesLibVersion=21.3.16
 
 # Mod Publishing
 projectReleaseType=release
@@ -37,9 +37,7 @@ dependenciesRequiredNeoForgeModrinth=puzzles-lib
 dependenciesRequiredForgeModrinth=forge-config-api-port, puzzles-lib
 
 # Optional Dependencies
-dependenciesOptionalFabricCurseForge=config-menus-forge, trinkets
-dependenciesOptionalNeoForgeCurseForge=config-menus-forge, curios-continuation
-dependenciesOptionalForgeCurseForge=config-menus-forge, curios
-dependenciesOptionalFabricModrinth=forge-config-screens, trinkets
-dependenciesOptionalNeoForgeModrinth=forge-config-screens, curios-continuation
-dependenciesOptionalForgeModrinth=forge-config-screens, curios
+dependenciesOptionalFabricCurseForge=config-menus-forge, accessories
+dependenciesOptionalNeoForgeCurseForge=config-menus-forge, accessories
+dependenciesOptionalFabricModrinth=forge-config-screens, accessories
+dependenciesOptionalNeoForgeModrinth=forge-config-screens, accessories
