--- a/1.21.5/Fabric/build.gradle
+++ b/1.21.5/Fabric/build.gradle
@@ -8,5 +8,5 @@ dependencies {
     modApi libs.puzzleslib.fabric
 
     // Accessories
-    modApi libs.accessories.fabric
+//    modApi libs.accessories.fabric
 }
