--- a/1.21.8/gradle.properties
+++ b/1.21.8/gradle.properties
@@ -5,7 +5,7 @@ copyBuildJar=true
 # Mod Attributes
 modId=horseexpert
 modName=Horse Expert
-modVersion=21.7.0
+modVersion=21.8.0
 modAuthor=Fuzs
 modDescription=You want to know what your horses are truly capable of? Check out their statistics!
 modLicense=MPL-2.0
@@ -19,9 +19,9 @@ modForgeDisplayTest=MATCH_VERSION
 modFabricEnvironment=*
 
 # Version Catalog
-dependenciesVersionCatalog=1.21.7-v1
-dependenciesPuzzlesLibVersion=21.7.0
-dependenciesMinPuzzlesLibVersion=21.7.0
+dependenciesVersionCatalog=1.21.8-v1
+dependenciesPuzzlesLibVersion=21.8.0
+dependenciesMinPuzzlesLibVersion=21.8.0
 
 # Mod Publishing
 projectReleaseType=release
@@ -37,7 +37,7 @@ dependenciesRequiredNeoForgeModrinth=puzzles-lib
 dependenciesRequiredForgeModrinth=forge-config-api-port, puzzles-lib
 
 # Optional Dependencies
-dependenciesOptionalFabricCurseForge=config-menus-forge, accessories
-dependenciesOptionalNeoForgeCurseForge=config-menus-forge, accessories
-dependenciesOptionalFabricModrinth=forge-config-screens, accessories
-dependenciesOptionalNeoForgeModrinth=forge-config-screens, accessories
+dependenciesOptionalFabricCurseForge=accessories
+dependenciesOptionalNeoForgeCurseForge=accessories
+dependenciesOptionalFabricModrinth=accessories
+dependenciesOptionalNeoForgeModrinth=accessories
