--- a/1.21.9/gradle.properties
+++ b/1.21.9/gradle.properties
@@ -5,7 +5,7 @@ copyBuildJar=true
 # Mod Attributes
 modId=horseexpert
 modName=Horse Expert
-modVersion=21.8.0
+modVersion=21.9.0
 modAuthor=Fuzs
 modDescription=You want to know what your horses are truly capable of? Check out their statistics!
 modLicense=MPL-2.0
@@ -19,9 +19,9 @@ modForgeDisplayTest=MATCH_VERSION
 modFabricEnvironment=*
 
 # Version Catalog
-dependenciesVersionCatalog=1.21.8-v1
-dependenciesPuzzlesLibVersion=21.8.0
-dependenciesMinPuzzlesLibVersion=21.8.0
+dependenciesVersionCatalog=1.21.9-v20
+#dependenciesPuzzlesLibVersion=21.8.0
+#dependenciesMinPuzzlesLibVersion=21.8.0
 
 # Mod Publishing
 projectReleaseType=release
@@ -31,13 +31,7 @@ projectModrinthId=24CSPS1E
 # Required Dependencies
 dependenciesRequiredFabricCurseForge=fabric-api, forge-config-api-port-fabric, puzzles-lib
 dependenciesRequiredNeoForgeCurseForge=puzzles-lib
-dependenciesRequiredForgeCurseForge=forge-config-api-port-fabric, puzzles-lib
 dependenciesRequiredFabricModrinth=fabric-api, forge-config-api-port, puzzles-lib
 dependenciesRequiredNeoForgeModrinth=puzzles-lib
-dependenciesRequiredForgeModrinth=forge-config-api-port, puzzles-lib
 
 # Optional Dependencies
-dependenciesOptionalFabricCurseForge=accessories
-dependenciesOptionalNeoForgeCurseForge=accessories
-dependenciesOptionalFabricModrinth=accessories
-dependenciesOptionalNeoForgeModrinth=accessories
