--- a/1.21.11/gradle.properties
+++ b/1.21.11/gradle.properties
@@ -1,37 +1,32 @@
-org.gradle.jvmargs=-Xmx4G
-org.gradle.daemon=false
-copyBuildJar=true
+org.gradle.caching=true
+org.gradle.configuration-cache=false
+org.gradle.daemon=true
+org.gradle.jvmargs=-Xmx2G
+org.gradle.parallel=true
+loom.ignoreDependencyLoomVersionValidation=true
 
-# Mod Attributes
-modId=horseexpert
-modName=Horse Expert
-modVersion=21.10.0
-modAuthor=Fuzs
-modDescription=You want to know what your horses are truly capable of? Check out their statistics!
-modLicense=MPL-2.0
-modSourceUrl=https://github.com/Fuzss/horseexpert
-modIssueUrl=https://github.com/Fuzss/horseexpert/issues
-modUpdateUrl=https://raw.githubusercontent.com/Fuzss/modresources/main/update/horseexpert.json
-modMavenGroup=fuzs.horseexpert
-# "MATCH_VERSION" for a mod required on both sides, "IGNORE_SERVER_VERSION" for a server only mod, "IGNORE_ALL_VERSION" for a client only mod
-modForgeDisplayTest=MATCH_VERSION
-# "*" for a mod loaded on both sides, "server" for a server only mod, "client" for a client only mod
-modFabricEnvironment=*
+project.libs=1.21.10-SNAPSHOT
+project.platforms=Common, Fabric, NeoForge
+project.plugins=1.0-SNAPSHOT
 
-# Version Catalog
-dependenciesVersionCatalog=1.21.10-v1
-#dependenciesPuzzlesLibVersion=21.8.0
-#dependenciesMinPuzzlesLibVersion=21.8.0
+mod.authors=Fuzs
+mod.description=You want to know what your horses are truly capable of? Check out their statistics!
+mod.group=fuzs.horseexpert
+mod.id=horseexpert
+mod.license=MPL-2.0
+mod.name=Horse Expert
+mod.version=21.10.0
 
-# Mod Publishing
-projectReleaseType=release
-projectCurseForgeId=666942
-projectModrinthId=24CSPS1E
+dependencies.fabric.fabricapi=required
+dependencies.fabric.forgeconfigapiport=required
+dependencies.fabric.puzzleslib=required
+dependencies.neoforge.puzzleslib=required
 
-# Required Dependencies
-dependenciesRequiredFabricCurseForge=fabric-api, forge-config-api-port-fabric, puzzles-lib
-dependenciesRequiredNeoForgeCurseForge=puzzles-lib
-dependenciesRequiredFabricModrinth=fabric-api, forge-config-api-port, puzzles-lib
-dependenciesRequiredNeoForgeModrinth=puzzles-lib
+distributions.curseforge.id=666942
+distributions.curseforge.slug=horse-expert
+distributions.github.slug=horseexpert
+distributions.modrinth.id=24CSPS1E
+distributions.modrinth.slug=horse-expert
 
-# Optional Dependencies
+environments.client=required
+environments.server=required
